<resources>
    <string name="app_name">GameIndividualAssignment4</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level_one">level_one</string>
    <string name="UP">UP</string>
    <string name="DOWN">DOWN</string>
    <string name="LEFT">LEFT</string>
    <string name="RIGHT">RIGHT</string>
    <string name="title_activity_main_menu">mainMenu</string>
    <string name="title_activity_level_two">level_two</string>
    <string name="title_activity_level_three">level_three</string>
    <string name="title_activity_level_one_takeoff">level_one_takeoff</string>


    <string name="intro2">Place these steps to take off in the correct order.</string>
    <string name="option_12">Turn on Engine</string>
    <string name="option_22">Take off</string>
    <string name="option_32">Retract Landing Gear</string>
    <string name="choice_12">First Step</string>
    <string name="choice_22">Second Step</string>
    <string name="choice_32">Third Step</string>

    <string name="intro3">Place these steps to land the plane in the correct order.</string>
    <string name="option_13">Turn off Auto Pilot</string>
    <string name="option_23">Deploy Landing Gear</string>
    <string name="option_33">Land the plane safely</string>
    <string name="choice_13">First Step</string>
    <string name="choice_23">Second Step</string>
    <string name="choice_33">Third Step</string>



</resources>
