<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:background="@drawable/gamebackgroundlvlone"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.edwardlafontant.gameindividualassignment4.level_one_takeoff"
    tools:showIn="@layout/activity_level_one_takeoff"
    android:orientation="vertical">



    <ImageView
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:id="@+id/imageView"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="0dp"
        android:src="@drawable/plane" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/intro2" />



    <TextView
        android:id="@+id/option_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffentry"
        android:gravity="center"
        android:text="@string/option_22"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffentry"
        android:gravity="center"
        android:text="@string/option_12"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffentry"
        android:gravity="center"
        android:text="@string/option_32"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffstep"
        android:gravity="center"
        android:text="@string/choice_12" />

    <TextView
        android:id="@+id/choice_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffstep"
        android:gravity="center"
        android:text="@string/choice_22" />

    <TextView
        android:id="@+id/choice_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffstep"
        android:gravity="center"
        android:text="@string/choice_32" />

    <Button
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:text="Run();"
        android:id="@+id/runBtn"
        android:layout_gravity="right"
        android:background="#fe0000"
        android:layout_row="3"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/resetbtn"
        android:background="#ffee00" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeBtn"
        android:src="@drawable/ic_home_black_24dp"
        android:layout_gravity="right"
        android:background="#00ffffff" />

</LinearLayout>
