<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gamebackgroundlvlone"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.edwardlafontant.gameindividualassignment4.level_three"
    tools:showIn="@layout/activity_level_three"
    android:orientation="vertical">


    <ImageView
        android:layout_width="42dp"
        android:layout_height="16dp"
        android:id="@+id/imageView"
        android:src="@drawable/plane" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/intro3" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffentry"
        android:gravity="center"
        android:text="@string/option_33"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffentry"
        android:gravity="center"
        android:text="@string/option_23"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffentry"
        android:gravity="center"
        android:text="@string/option_13"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffstep"
        android:gravity="center"
        android:text="@string/choice_13" />

    <TextView
        android:id="@+id/choice_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffstep"
        android:gravity="center"
        android:text="@string/choice_23" />

    <TextView
        android:id="@+id/choice_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/takeoffstep"
        android:gravity="center"
        android:text="@string/choice_33" />

    <Button
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:text="Run();"
        android:id="@+id/runBtn"
        android:layout_gravity="right"
        android:background="#fe0000"
        android:layout_row="3"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restbtn3"
        android:text="Reset"
        android:background="#f2ff00" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeBtn1"
        android:src="@drawable/ic_home_black_24dp"
        android:layout_gravity="right"
        android:background="#00ffffff" />

</LinearLayout>
