<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/gamebackgroundlvlone"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".level_two"
    tools:showIn="@layout/activity_level_two"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/mainscreen">


    <ImageView
                android:layout_width="124dp"
                android:layout_height="44dp"
                android:id="@+id/imageView3"
        android:src="@drawable/stormcloud1" />

    <ImageView
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:id="@+id/stormcloud"
        android:src="@drawable/stormcloud1"
        android:layout_marginLeft="250dp"/>


    <ImageView
    android:layout_width="62dp"
    android:layout_height="36dp"
    android:id="@+id/imageView"
    android:layout_marginTop="0dp"
    android:layout_marginLeft="0dp"
    android:src="@drawable/plane" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/imageView4"
        android:src="@drawable/stormcloud2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:layout_gravity="right" />

    <ImageView
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:id="@+id/imageView2"
        android:src="@drawable/stormcloud2"
        android:layout_marginTop="-90dp"
        android:layout_marginLeft="100dp" />


    <ImageView
            android:layout_width="53dp"
            android:layout_height="31dp"
            android:id="@+id/imageblank"
            android:layout_marginTop="90dp"
            />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


<TextView
    android:id="@+id/downFn"
    android:layout_width="wrap_content"
    android:layout_height="58dp"
    android:layout_margin="5dp"
    android:background="@drawable/direction"
    android:gravity="center"

    android:text="@string/DOWN"
    android:textStyle="bold"

    android:layout_weight="0.15"
   />

<TextView
    android:id="@+id/upFn"
    android:layout_width="wrap_content"
    android:layout_height="58dp"
    android:layout_margin="5dp"
    android:background="@drawable/direction"
    android:gravity="center"
    android:text="@string/UP"
    android:textStyle="bold"
    android:layout_weight="0.23"
    android:layout_row="2"
    android:layout_column="0"
    />

<TextView
    android:id="@+id/leftFn"
    android:layout_width="wrap_content"
    android:layout_height="58dp"
    android:layout_margin="5dp"
    android:background="@drawable/direction"
    android:gravity="center"
    android:text="@string/LEFT"
    android:textStyle="bold"
    android:layout_weight="0.23"
         />

<TextView
        android:id="@+id/rightFn"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:background="@drawable/direction"
        android:gravity="center"
        android:text="@string/RIGHT"

        android:textStyle="bold"
    android:layout_weight="0.18"
       />
    </TableRow>



    <Space
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

        <TextView
            android:id="@+id/show_event_type"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scrollHorizontally="false"
            android:text="System.Out.Println(&quot;"
            android:textSize="20dp"
            android:textAlignment="textEnd"
            android:background="#ffffff"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:id="@+id/command"
            android:layout_width="107dp"
            android:layout_height="48dp"
            android:background="@drawable/entry"
            android:gravity="center"
            android:text="Enter a Command"
            android:layout_row="0"
            android:layout_column="7" />

        <TextView
                android:id="@+id/show_event_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n&quot;); "
                android:textSize="20dp"
                android:layout_weight="0.18"
                android:background="#ffffff"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:text="Run();"
        android:id="@+id/runBtn"
        android:layout_gravity="right"
        android:background="#fe0000"
        android:layout_row="3"
        android:layout_column="0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeBtn2"
        android:src="@drawable/ic_home_black_24dp"
        android:layout_gravity="right"
        android:background="#00ffffff" />


</LinearLayout>
